Added peanut butter recipe

--- a/recipes/spaghetti_meatballs.html
+++ b/recipes/spaghetti_meatballs.html
@@ -12,10 +12,10 @@
     <p>This recipe is quite simple. All you need is a bag of costco 
         microwavable meatballs and whatever boxed spaghetti noodles and jar sauce. <br> 
         Boil the noodles, microwave the meatballs, combine everything
-        with the sauce, voila bitch bon ape tits you have the meal that 
+        with the sauce, bon ape tits you have the meal that 
         I eat to stave off the feeling of impending doom. <br> Is it healthy, no. Is it a gourmet
-        fucking meal, no. Is it cheap, fast, and easy while tasting pretty 
-        decent? Yeah, so shut the fuck up (jk).
+        meal, no. Is it cheap, fast, and easy while tasting pretty 
+        decent? Ehhh debatable on the last part.
     </p>
     <h3> Ingredients</h3>
     <ul>
@@ -27,7 +27,7 @@
     </ul>
     <h3> Instructions</h3>
     <ol>
-        <li>Boil the spaghetti for .0003 - .0005 fortnights, microwave meatballs </li>
+        <li>Boil the spaghetti for God knows how long, microwave meatballs </li>
         <li>Drain the water, add the jar sauce</li>
         <li>Depending on your sauce, you may want to season more at this point</li>
         <li>Add your meatballs</li>
