--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Classic Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href = "./recipes/spaghetti_meatballs.html">Spaghetti and Meatballs</a>
+    <h1>"Recipes" for the culinarily challenged</h1>
+    <br>
+    <img src = "recipes/recipe_images/shef.jpg">
+    <h3>A collection of recipes for the responsible adult</h3>
+    <ul>
+        <li><a href = "./recipes/spaghetti_meatballs.html">Spaghetti and Meatballs</a></li>
+        <li><a href = "./recipes/Mcdonalds.html">McDonald's</a></li>
+        <li><a href = "./recipes/peanut_butter.html">Peanut Butter</a></li>
+
+    </ul>
 </body>
 </html>
